--- a/package.json
+++ b/package.json
@@ -27,24 +27,25 @@
   },
   "homepage": "https://github.com/iamTetsuShizen/frontend-starter-kit#readme",
   "devDependencies": {
-    "@babel/core": "^7.10.3",
-    "@babel/plugin-proposal-class-properties": "^7.10.1",
+    "@babel/core": "^7.13.10",
+    "@babel/plugin-proposal-class-properties": "^7.13.0",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/preset-env": "^7.10.3",
-    "babel-loader": "^8.1.0",
+    "@babel/preset-env": "^7.13.10",
+    "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^1.0.0",
     "eslint": "^5.16.0",
     "eslint-loader": "^2.2.1",
     "file-loader": "^2.0.0",
-    "html-webpack-plugin": "^4.3.0",
+    "html-webpack-plugin": "^4.5.2",
+    "jest": "^26.6.3",
     "mini-css-extract-plugin": "^0.4.4",
     "node-sass": "^4.14.1",
     "sass-loader": "^7.3.1",
     "style-loader": "^0.23.1",
-    "webpack": "^4.43.0",
+    "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0",
+    "webpack-dev-server": "^3.11.2",
     "webpack-merge": "^4.2.2"
   },
   "dependencies": {
